--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am interested in game development and believe this course to be a fantastic foundation for my future programming career.   </p>                
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in Northern California in a town called Benicia. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I really enjoy playing golf and gaming.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be working on a game development team.</p>
+      <h1>Where Do You Live</h1>
+      <p>I currently live in Savannah, Georgia.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer in order to have an avenue for my ideas. </p>
     </section>
 
     <footer id="footer">
