--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>I really enjoy playing golf and gaming.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job would be working on a game development team.</p>
-      <h1>Where Do You Live</h1>
+      <h1>Where do you live?</h1>
       <p>I currently live in Savannah, Georgia.</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>I want to be a web developer in order to have an avenue for my ideas. </p>
